--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
         </section>
 
         <section class="acciones">
-            <a href="https://www.https://www.google.com/maps/dir//41.1143737,1.2302581/@41.1143099,1.2302997,258m/data=!3m1!1e3!4m2!4m1!3e0?hl=es&entry=ttu&g_ep=EgoyMDI1MDYxMS4wIKXMDSoASAFQAw%3D%3D
+            <a href="https://www.https://www.google.com//dir//41.1143737,1.2302581/@41.1143099,1.2302997,258m/data=!3m1!1e3!4m2!4m1!3e0?hl=es&entry=ttu&g_ep=EgoyMDI1MDYxMS4wIKXMDSoASAFQAw%3D%3D
             <a href="https://wa.me/123456789?text=¡Hola!%20Confirmo%20mi%20asistencia%20a%20tu%20cumpleaños%20de%2050.%20¡Nos%20vemos%20allí!" target="_blank" class="btn btn-whatsapp">Confirmar asistencia por WhatsApp</a>
 
             <button onclick="window.print()" class="btn btn-print">Guardar o Imprimir Invitación</button>
