--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ para brindar juntos!"</p>
         </section>
 
         <section class="acciones">
-            <a href="https://www.google.com/maps/place/Bar+Saque+y+Tapas/@41.1151199,1.2305287,471m/data=!3m1!1e3!4m6!3m5!1s0x12a3fd000a574cc5:0xee570697f43ac987!8m2!3d41.1143925!4d1.2304277!16s%2Fg%2F11x8g9flt5?hl=es&entry=ttu&g_ep=EgoyMDI1MDYxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="btn">Cómo llegar (Google Maps)</a>
+            <a href="https://maps.app.goo.gl/4zV1zbN5FNadfvob9" target="_blank" class="btn">Cómo llegar (Google Maps)</a>
         
             <a href="https://wa.me/123456789?text=%C2%A1Hola!%20Confirmo%20mi%20asistencia%20a%20tu%20cumplea%C3%B1os%20de%2050.%20%C2%A1Nos%20vemos%20all%C3%AD!" target="_blank" class="btn btn-whatsapp">Confirmar asistencia por WhatsApp</a>
 
