--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="es" data-theme="dark"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<html lang="es" data-theme="light">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis 50 Años - María Fernanda</title>
     
-    <link rel="preconnect" href="https://fonts.googleapis.com/">
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
-    <link href="Mis%2050%20A%C3%B1os%20-%20Mar%C3%ADa%20Fernanda_files/css2.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
         /* --- VARIABLES DE COLOR (MODO CLARO Y OSCURO) --- */
@@ -358,13 +358,13 @@
 </head>
 <body>
 
-    <div id="particles-js"><canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;" width="1854" height="963"></canvas></div>
+    <div id="particles-js"></div>
 
     <main class="invitacion-container">
 
         <div class="theme-switch-wrapper">
             <label class="theme-switch" for="checkbox">
-                <input type="checkbox" id="checkbox" checked="checked">
+                <input type="checkbox" id="checkbox" />
                 <div class="slider round"></div>
             </label>
         </div>
@@ -377,35 +377,33 @@
         <section class="contador-container">
             <h3>Faltan:</h3>
             <div id="contador">
-                <div class="contador-bloque"><span id="dias">07</span><p>Días</p></div>
+                <div class="contador-bloque"><span id="dias">00</span><p>Días</p></div>
                 <div class="contador-bloque"><span id="horas">00</span><p>Horas</p></div>
-                <div class="contador-bloque"><span id="minutos">32</span><p>Minutos</p></div>
-                <div class="contador-bloque"><span id="segundos">06</span><p>Segundos</p></div>
+                <div class="contador-bloque"><span id="minutos">00</span><p>Minutos</p></div>
+                <div class="contador-bloque"><span id="segundos">00</span><p>Segundos</p></div>
             </div>
         </section>
 
         <section class="mensaje">
-            <p>"50 años de historias, risas y sueños. Quiero celebrar 
-este medio siglo de vida con las personas que más quiero. ¡Te espero 
-para brindar juntos!"</p>
+            <p>"50 años de historias, risas y sueños. Quiero celebrar este medio siglo de vida con las personas que más quiero. ¡Te espero para brindar juntos!"</p>
             <p style="font-family: var(--title-font); font-size: 2.5rem; margin-top: 0; margin-bottom:0;">Fernanda</p>
         </section>
 
         <section class="detalles">
             <div class="detalle-item">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"/></svg>
                 <span>Sábado, 21 de Junio de 2025</span>
             </div>
             <div class="detalle-item">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/></svg>
                 <span>21:00 hs</span>
             </div>
             <div class="detalle-item">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
                 <span>Pol. Ind. Francolí, 10, 43006 Tarragona</span>
             </div>
             <div class="detalle-item">
-                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px"><path d="M15 18.5c-2.51 0-4.68-1.42-5.76-3.5H15v-2H8.58c-.05-.33-.08-.66-.08-1s.03-.67.08-1H15V9H9.24C10.32 6.92 12.5 5.5 15 5.5c1.61 0 3.09.59 4.23 1.57L21 5.3C19.41 3.87 17.3 3 15 3c-3.92 0-7.24 2.51-8.48 6H3v2h3.06c-.04.33-.06.67-.06 1s.02.67.06 1H3v2h3.52c1.24 3.49 4.56 6 8.48 6 2.31 0 4.41-.87 6-2.3l-1.78-1.77C18.09 17.91 16.61 18.5 15 18.5z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px"><path d="M15 18.5c-2.51 0-4.68-1.42-5.76-3.5H15v-2H8.58c-.05-.33-.08-.66-.08-1s.03-.67.08-1H15V9H9.24C10.32 6.92 12.5 5.5 15 5.5c1.61 0 3.09.59 4.23 1.57L21 5.3C19.41 3.87 17.3 3 15 3c-3.92 0-7.24 2.51-8.48 6H3v2h3.06c-.04.33-.06.67-.06 1s.02.67.06 1H3v2h3.52c1.24 3.49 4.56 6 8.48 6 2.31 0 4.41-.87 6-2.3l-1.78-1.77C18.09 17.91 16.61 18.5 15 18.5z"/></svg>
                 <span>Valor de la tarjeta: 25 € por persona</span>
             </div>
         </section>
@@ -440,16 +438,16 @@ para brindar juntos!"</p>
         </section>
 
         <section class="acciones">
-            <a href="https://maps.app.goo.gl/4zV1zbN5FNadfvob9" target="_blank" class="btn">Cómo llegar (Google Maps)</a>
+            <a href="https://maps.app.goo.gl/bmGa1yW9WqihrSNZ7" target="_blank" class="btn">Cómo llegar (Google Maps)</a>
         
-            <a href="https://wa.me/123456789?text=%C2%A1Hola!%20Confirmo%20mi%20asistencia%20a%20tu%20cumplea%C3%B1os%20de%2050.%20%C2%A1Nos%20vemos%20all%C3%AD!" target="_blank" class="btn btn-whatsapp">Confirmar asistencia por WhatsApp</a>
+            <a href="https://wa.me/123456789?text=¡Hola!%20Confirmo%20mi%20asistencia%20a%20tu%20cumpleaños%20de%2050.%20¡Nos%20vemos%20allí!" target="_blank" class="btn btn-whatsapp">Confirmar asistencia por WhatsApp</a>
 
             <button onclick="window.print()" class="btn btn-print">Guardar o Imprimir Invitación</button>
         </section>
 
     </main>
 
-    <script src="Mis%2050%20A%C3%B1os%20-%20Mar%C3%ADa%20Fernanda_files/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
     <script>
         // --- LÓGICA DEL CONTADOR REGRESIVO ---
@@ -509,6 +507,5 @@ para brindar juntos!"</p>
             }
         })();
     </script>
-
-
-</body></html>
+</body>
+</html>
