--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             </div>
             <div class="detalle-item">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
-                <span>Pol. Ind. Francolí, 10, 43006 Tarragona</span>
+                <span>Masia "Can Riera", Carretera de Valls km 5, Tarragona</span>
             </div>
             <div class="detalle-item">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px"><path d="M15 18.5c-2.51 0-4.68-1.42-5.76-3.5H15v-2H8.58c-.05-.33-.08-.66-.08-1s.03-.67.08-1H15V9H9.24C10.32 6.92 12.5 5.5 15 5.5c1.61 0 3.09.59 4.23 1.57L21 5.3C19.41 3.87 17.3 3 15 3c-3.92 0-7.24 2.51-8.48 6H3v2h3.06c-.04.33-.06.67-.06 1s.02.67.06 1H3v2h3.52c1.24 3.49 4.56 6 8.48 6 2.31 0 4.41-.87 6-2.3l-1.78-1.77C18.09 17.91 16.61 18.5 15 18.5z"/></svg>
@@ -433,14 +433,14 @@
                 <h4>BEBIDA</h4>
                 <ul>
                     <li>Vino, gaseosa, agua</li>
-                </ul>
+                </ul>Cerverza Libre</ul>
             </div>
         </section>
 
         <section class="acciones">
-            <a href="https://maps.app.goo.gl/bmGa1yW9WqihrSNZ7" target="_blank" class="btn">Cómo llegar (Google Maps)</a>
-        
-            <a href="https://wa.me/123456789?text=¡Hola!%20Confirmo%20mi%20asistencia%20a%20tu%20cumpleaños%20de%2050.%20¡Nos%20vemos%20allí!" target="_blank" class="btn btn-whatsapp">Confirmar asistencia por WhatsApp</a>
+            <a href="https://www.google.com/maps/dir//41.1138584,1.2302327/@41.1139252,1.2300297,107m/data=!3m1!1e3!4m2!4m1!3e0?hl=es&entry=ttu&g_ep=EgoyMDI1MDYxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="btn">Cómo llegar (Google Maps)</a>
+            
+            <a href="https://api.whatsapp.com/send/?phone=624226375&text=%C2%A1Hola%21+Confirmo+mi+asistencia+a+tu+cumplea%C3%B1os+de+50.+%C2%A1Nos+vemos+all%C3%AD%21%22+target%3D%22_blank%22+class%3D%22btn+btn-whatsapp&type=phone_number&app_absent=0">Confirmar asistencia por WhatsApp</a>
 
             <button onclick="window.print()" class="btn btn-print">Guardar o Imprimir Invitación</button>
         </section>
