--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         <section class="acciones">
             <a href="https://www.google.com/maps/dir//41.1138584,1.2302327/@41.1139252,1.2300297,107m/data=!3m1!1e3!4m2!4m1!3e0?hl=es&entry=ttu&g_ep=EgoyMDI1MDYxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="btn">Cómo llegar (Google Maps)</a>
             
-            <a href="https://api.whatsapp.com/send/?phone=624226375&text=%C2%A1Hola%21+Confirmo+mi+asistencia+a+tu+cumplea%C3%B1os+de+50.+%C2%A1Nos+vemos+all%C3%AD%21%22+target%3D%22_blank%22+class%3D%22btn+btn-whatsapp&type=phone_number&app_absent=0">Confirmar asistencia por WhatsApp</a>
+            <a href="https://api.whatsapp.com/send/?phone=624226375&text=%C2%A1Hola%21+Confirmo+mi+asistencia+a+tu+cumplea%C3%B1os+de+50.+%C2%A1Nos+vemos+all%C3%AD%21%22+target%3D%22_blank%22+class%3D%22btn+btn-whatsapp&type=phone_number&app_absent=0" target="_blank" class="btn btn-whatsapp">Confirmar asistencia por WhatsApp</a>
 
             <button onclick="window.print()" class="btn btn-print">Guardar o Imprimir Invitación</button>
         </section>
