--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 <h4>BEBIDA</h4>
                 <ul>
                     <li>Vino, gaseosa, agua</li>
-                </ul>Cerverza Libre</ul>
+                </ul>Barra libre de cerveza</ul>
             </div>
         </section>
 
